# EMC-SigProfiler

./: .gitignore  README.md  devenv.nix  pyproject.toml
src/emcSP/: cli.py  core.py  signatures.py
src/emcSP/templates/: report.html
tests/: conftest.py  test_cli.py  test_core.py
