[project]
name = "emcSP"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas <= 2.3",
    "typer",
    "SigProfilerMatrixGenerator",
    "SigProfilerAssignment",
    "SigProfilerPlotting",
]

[dependency-groups]
dev = [ "pytest" ]

[project.scripts]
emcsp = "emcSP.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
